feat: add fontawesome

--- a/deployments/Dockerfile
+++ b/deployments/Dockerfile
@@ -38,6 +38,7 @@ RUN apt-get update && apt-get install -y \
     texlive-lang-chinese \
     texlive-lang-cjk \
     texlive-extra-utils \
+    texlive-fontawesome \
     latexmk \
     fonts-ubuntu \
     fonts-noto-cjk \
