--- a/deployments/docker-compose.prod.yml
+++ b/deployments/docker-compose.prod.yml
@@ -1,7 +1,3 @@
-# Local development docker-compose configuration
-# For staging: use docker-compose.staging.yml
-# For production: use docker-compose.prod.yml
-
 version: '3.8'
 
 services:
@@ -18,13 +14,22 @@ services:
     environment:
       - PORT=3001
       - HISTORY_DIR=/app/logs
-      - GIN_MODE=debug
+      - GIN_MODE=release
     restart: unless-stopped
     deploy:
       resources:
         limits:
-          memory: 2G
+          memory: 4G
         reservations:
-          memory: 256M
+          memory: 1G
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:3001/health"]
+      interval: 30s
+      timeout: 5s
+      retries: 3
+      start_period: 10s
+    logging:
+      driver: "json-file"
+      options:
+        max-size: "10m"
+        max-file: "3"
